# ApplyFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: epic-03-acceptance-check.md
docs/decisions/: 0001-application-shell-web-vs-cli.md
frontend/: .env.example  .prettierrc  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
migrations/: env.py
migrations/versions/: 0001_create_job_applications.py  0002_create_profile_tables.py  0003_add_application_standard_fields.py  0004_add_provenance_tagging.py  0005_create_resumes_table.py  0006_create_answer_memories_table.py  0007_create_job_postings_table.py  0008_create_resolved_listings_table.py  0009_replace_resolved_listings_with_boards.py  0010_add_job_posting_staleness_fields.py  0011_add_job_posting_requirements.py  0012_add_profile_clearance_and_degree.py  0013_create_job_match_feedback_table.py
src/application/: exceptions.py
src/domain/: exceptions.py
src/infrastructure/: config.py
tests/: conftest.py
tests/acceptance/: test_epic00_skeleton.py  test_epic03_matching_pipeline.py
tests/application/: test_analyze_scoring_feedback.py  test_answer_memory_use_cases.py  test_classify_job_requirements.py  test_detect_job_requirement_gaps.py  test_detect_stale_job_postings.py  test_extract_job_requirements.py  test_find_similar_answer.py  test_generate_gap_resolution_questions.py  test_generate_job_fit_rationale.py  test_get_llm_completion.py  test_ingest_aggregator_jobs.py  (+9 more)
(+229 files in other folders)
